@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.program.advanced.emulator.launcher" name="Advanced Emulator Launcher" version="0.9.5~beta1" provider-name="Wintermute0110">
+<addon id="plugin.program.advanced.emulator.launcher"
+       name="Advanced Emulator Launcher" 
+       version="0.9.5~beta2" 
+       provider-name="Wintermute0110">
   <requires>
     <!-- 2.24.0  Jarvis 16.x / 2.25.0  Krypton 17.x -->
     <import addon="xbmc.python" version="2.24.0" />
